# zencontrol-simulator

./: .gitignore  README.md  _protocol.txt  config.from-live.yaml  config.yaml  pyproject.toml  setup-venv.sh
tests/: conftest.py  test_absolute_input_live.py  test_demo_permutations.py  test_dump.py  test_event_targets.py  test_integration.py  test_protocol.py  test_protocol_live.py  test_recent_coverage.py  test_state.py  test_tcp.py
zencontrol_simulator/: __init__.py  __main__.py  config.yaml  dump.py  events.py  handlers.py  protocol.py  server.py  world.py
