[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zencontrol-simulator"
version = "0.1.0"
description = "UDP simulator for Zencontrol TPI Advanced controllers."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    {name = "Simon Wright"},
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
]
# Live protocol / dump tools: PyPI pin, or editable checkout via setup-venv.sh
live = [
    "zencontrol-python>=0.1.6",
]

[project.scripts]
zencontrol-simulator = "zencontrol_simulator.__main__:main"
zencontrol-dump = "zencontrol_simulator.dump:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["zencontrol_simulator*"]

[tool.setuptools.package-data]
zencontrol_simulator = ["config.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "UP"]
